# ramalama

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
container-images/all/: Containerfile
container-images/cuda/: Containerfile
container-images/rag/: Containerfile  rag.yaml
container-images/rag/mac/: rag.yaml
container-images/ramalama/latest/: Dockerfile  Dockerfile_rhel_cuda  Dockerfile_rhel_cuda_make  Dockerfile_ubuntu_cuda  llama_official_cuda
container-images/rocm/: Containerfile
container-images/scripts/: build_rag.sh  doc2rag  rag_framework  test.md
container-images/small/: Containerfile
db/: test.json
docs/: ramalama-rag.1.md  ramalama-serve.1.md  ramalama-stop.1.md  ramalama.1.md  ramalama.conf  ramalama.conf.5.md  wsl2-docker-cuda.md  wsl2-podman-cuda.md
docsite/: convert_manpages.py
inference-spec/engines/: llama.cpp.yaml  mlx.yaml  vllm.yaml
inference-spec/schema/: schema.1-0-0.json
ramalama/: __init__.py  arg_types.py  chat.py  cli.py  common.py  compose.py  config.py  engine.py  kube.py  model.py  quadlet.py  rag.py  types.py
ramalama/cli/: __init__.py  _arg_normalization.py  _parser.py  _utils.py  arg_types.py
ramalama/cli/commands/: __init__.py  containers.py  list.py  pull.py  rag.py  rm.py  serve.py  stop.py
ramalama/command/: context.py  factory.py
ramalama/config/: __init__.py  _loader.py  types.py
ramalama/daemon/model_runner/: command_factory.py
ramalama/inference/: context.py  error.py  factory.py  schema.py
ramalama/mcp/: mcp_agent.py
ramalama/model_inspect/: __init__.py  gguf_info.py  gguf_parser.py
ramalama/model_store/: global_store.py  reffile.py  snapshot_file.py  store.py
ramalama/plugins/runtimes/inference/: llama_cpp.py
ramalama/plugins/runtimes/inference/rag/: cli.py  handler.py
ramalama/rag/: chunker.py  converter.py  pipeline.py  vectordb.py
ramalama/runtime/: compose.py  engine.py  kube.py  quadlet.py
ramalama/runtime/generators/: compose.py  kube.py  quadlet.py
ramalama/templates/: conversion.py  go2jinja.py
ramalama/transports/: __init__.py  base.py  hf_repo_base.py  huggingface.py  modelscope.py  oci.py  oci_tools.py  ollama.py  ollama_utils.py  rlcr.py  transport_factory.py  url.py
ramalama/utils/: common.py  console.py  crypto.py  gpu.py  http_client.py  logger.py  naming.py  process.py  proxy.py  toml_parser.py
shortnames/: shortnames.conf
test/e2e/: test_cli_max_tokens.py  test_help.py  test_mlx.py  test_serve.py
test/system/: 070-rag.bats
test/unit/: test_cli_args.py  test_common.py  test_compose.py  test_config.py  test_config_documentation.py  test_engine.py  test_kube.py  test_quadlet.py  test_transport_base.py  test_transport_factory.py
test/unit/command/: test_factory.py
test/unit/command/data/engines/: llama.cpp.yaml
test/unit/command/data/schema/: schema.1-0-0.json
